--- a/package.json
+++ b/package.json
@@ -1,31 +1,26 @@
 {
-	"name": "target365-sdk",
-	"version": "1.8.0",
-	"description": "Target365 SDK",
-	"main": "target365-client.js",
+	"name": "target365",
+	"version": "1.0.0",
+	"description": "",
+	"main": "source/target365-client.ts",
 	"scripts": {
-		"test": "mocha --timeout=50000"
+		"dev": "nodemon source/target365-client.ts",
+		"build": "rm -rf build/ && prettier --write source/ && tsc",
+		"test": "echo \"Error: no test specified\" && exit 1"
 	},
-	"author": "Target365",
-	"license": "MIT",
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
 	"dependencies": {
-		"@hapi/joi": "^15.1.0",
-		"asn1.js": "^5.0.1",
-		"bn.js": "^4.11.8",
-		"ec-key": "^0.0.2",
+		"@types/express": "^4.17.14",
+		"@types/morgan": "^1.9.3",
+		"axios": "^1.1.3",
+		"express": "^4.18.2",
 		"moment": "^2.29.4",
-		"node-fetch": "^2.6.7",
-		"encoding": "0.1.13",
-		"sha2": "^1.0.2",
-		"uuid": "^3.3.2"
-	},
-	"devDependencies": {
-		"chai": "4.3.6",
-		"mocha": "9.2.2"
-	},
-	"homepage": "https://github.com/Target365/sdk-for-node",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/Target365/sdk-for-node.git"
+		"morgan": "^1.10.0",
+		"nodemon": "^2.0.20",
+		"ts-node": "^10.9.1",
+		"typescript": "^4.9.3",
+		"uuidv4": "^6.2.13"
 	}
 }
