--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
 	"description": "Target365 SDK",
 	"main": "source/target365-client.ts",
 	"scripts": {
+		"build": "tsc",
 		"dev": "nodemon source/target365-client.ts",
-		"build": "rm -rf build/ && prettier --write source/ && tsc",
+		"start": "nodemon build/target365-client.js",
+		"prod": "npm run build && npm run start",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [],
