--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
 	"dependencies": {
 		"@types/express": "^4.17.14",
 		"@types/morgan": "^1.9.3",
+		"asn1.js": "^5.4.1",
 		"axios": "^1.1.3",
+		"ec-key": "^0.0.4",
 		"express": "^4.18.2",
 		"moment": "^2.29.4",
 		"morgan": "^1.10.0",
 		"nodemon": "^2.0.20",
+		"sha2": "^1.0.2",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.9.3",
+		"uuid": "^9.0.0",
 		"uuidv4": "^6.2.13"
 	}
 }
