--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"dev": "nodemon source/target365-client.ts",
 		"start": "nodemon build/target365-client.js",
 		"prod": "npm run build && npm run start",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "mocha -r ts-node/register source/**/*-test.ts --timeout=50000"
 	},
 	"keywords": [],
 	"author": "",
@@ -24,9 +24,13 @@
 		"morgan": "^1.10.0",
 		"nodemon": "^2.0.20",
 		"sha2": "^1.0.2",
-		"ts-node": "^10.9.1",
 		"typescript": "^4.9.3",
 		"uuid": "^9.0.0",
 		"uuidv4": "^6.2.13"
+	},
+	"devDependencies": {
+		"@types/mocha": "^10.0.1",
+		"chai": "^4.3.7",
+		"ts-node": "^10.9.1"
 	}
 }
