--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "target365-sdk",
-	"version": "1.8.3",
+	"version": "1.8.4",
 	"description": "Target365 SDK",
 	"main": "target365-client.js",
 	"scripts": {
@@ -9,15 +9,15 @@
 	"author": "Target365",
 	"license": "MIT",
 	"dependencies": {
-		"@hapi/joi": "^15.1.0",
-		"asn1.js": "^5.0.1",
+		"@hapi/joi": "^15.1.1",
+		"asn1.js": "^5.4.1",
 		"bn.js": "^4.11.8",
-		"ec-key": "^0.0.2",
-		"moment": "^2.29.4",
+		"ec-key": "^0.0.6",
+		"moment": "^2.30.1",
 		"node-fetch": "^2.6.7",
-		"encoding": "0.1.13",
+		"encoding": "^0.1.13",
 		"sha2": "^1.0.2",
-		"uuid": "^3.3.2"
+		"uuid": "^10.0.0"
 	},
 	"devDependencies": {
 		"chai": "4.3.6",
